--- a/index.html
+++ b/index.html
@@ -1,18 +1,56 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hamid Firdous | Software Engineer</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="style.css" />
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #f4f4f9;
+    }
+    .hero {
+      background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
+      color: white;
+      padding: 100px 0;
+      text-align: center;
+    }
+    .hero h1 {
+      font-size: 3rem;
+    }
+    .section-title {
+      margin-top: 60px;
+      margin-bottom: 30px;
+      text-align: center;
+    }
+    .icon-box {
+      text-align: center;
+      padding: 20px;
+    }
+    .icon-box i {
+      font-size: 3rem;
+      color: #007bff;
+    }
+    footer {
+      background: #343a40;
+      color: white;
+      padding: 20px 0;
+      text-align: center;
+    }
+  </style>
 </head>
 <body>
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
+    <div class="container">
       <a class="navbar-brand" href="#">Hamid Firdous</a>
-      <div class="collapse navbar-collapse">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
           <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
@@ -23,36 +61,51 @@
     </div>
   </nav>
 
+  <section class="hero">
+    <div class="container">
+      <h1>Hi, I'm Hamid</h1>
+      <p class="lead">Software Engineer | Web Developer | AI Enthusiast</p>
+    </div>
+  </section>
+
   <section id="about" class="container py-5">
-    <h2>About Me</h2>
-    <p>I’m a Software Engineer with experience in web development, AI content optimization, and quality control. Passionate about building scalable web applications and smart solutions using machine learning.</p>
+    <h2 class="section-title">About Me</h2>
+    <p>I’m a Software Engineer with a strong background in web development, AI content optimization, and prompt engineering. I enjoy turning complex problems into simple, beautiful, and intuitive solutions.</p>
   </section>
 
   <section id="skills" class="container py-5">
-    <h2>Skills & Tools</h2>
-    <ul>
-      <li>Python, HTML, CSS, JavaScript</li>
-      <li>GHL, WordPress, Odoo</li>
-      <li>SEO, QC Testing, Prompt Engineering</li>
-      <li>SCRUM, Agile Teams</li>
-    </ul>
+    <h2 class="section-title">Skills & Technologies</h2>
+    <div class="row text-center">
+      <div class="col-md-3 icon-box"><i class="fab fa-html5"></i><p>HTML5</p></div>
+      <div class="col-md-3 icon-box"><i class="fab fa-css3-alt"></i><p>CSS3</p></div>
+      <div class="col-md-3 icon-box"><i class="fab fa-js-square"></i><p>JavaScript</p></div>
+      <div class="col-md-3 icon-box"><i class="fab fa-python"></i><p>Python</p></div>
+      <div class="col-md-3 icon-box"><i class="fas fa-database"></i><p>MySQL</p></div>
+      <div class="col-md-3 icon-box"><i class="fab fa-wordpress"></i><p>WordPress</p></div>
+      <div class="col-md-3 icon-box"><i class="fas fa-cogs"></i><p>GHL / Automation</p></div>
+      <div class="col-md-3 icon-box"><i class="fas fa-code-branch"></i><p>Git & GitHub</p></div>
+    </div>
   </section>
 
   <section id="projects" class="container py-5">
-    <h2>Projects</h2>
-    <p><strong>Portfolio Website</strong> – This site! Built with HTML, CSS, and Bootstrap.</p>
-    <p><strong>GHL AI Website Optimization</strong> – Improved content quality using prompt engineering tools for SEO and UI integration.</p>
+    <h2 class="section-title">Projects</h2>
+    <ul>
+      <li><strong>Portfolio Website</strong> – A responsive site built with HTML, CSS, and Bootstrap.</li>
+      <li><strong>GHL Website Optimization</strong> – Enhanced client websites with AI prompt engineering for SEO.</li>
+      <li><strong>WordPress Business Sites</strong> – Built e-commerce and company pages using CMS tools.</li>
+    </ul>
   </section>
 
   <section id="contact" class="container py-5">
-    <h2>Contact</h2>
+    <h2 class="section-title">Contact</h2>
     <p>Email: <a href="mailto:hamid.f3489@gmail.com">hamid.f3489@gmail.com</a></p>
-    <p>LinkedIn: <a href="https://linkedin.com/in/hamid-firdous/" target="_blank">linkedin.com/in/hamid-firdous</a></p>
+    <p>LinkedIn: <a href="https://linkedin.com/in/hamid-firdous" target="_blank">linkedin.com/in/hamid-firdous</a></p>
   </section>
 
-  <footer class="text-center py-3 bg-dark text-white">
-    &copy; 2025 Hamid Firdous
+  <footer>
+    <p>&copy; 2025 Hamid Firdous | All rights reserved.</p>
   </footer>
 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
