--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <section class="hero">
     <div class="container">
       <h1>Hi, I'm Hamid</h1>
-      <p class="lead">Software Engineer | Web Developer | AI Enthusiast</p>
+      <p class="lead">Software Engineer | Web Developer | AI </p>
     </div>
   </section>
 
