--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,10 +9,11 @@
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
-      background-color: #f4f4f9;
+      background-color: #121212;
+      color: #f4f4f4;
     }
     .hero {
-      background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
+      background: linear-gradient(to right, #1f4037, #99f2c8);
       color: white;
       padding: 100px 0;
       text-align: center;
@@ -32,13 +32,31 @@
     }
     .icon-box i {
       font-size: 3rem;
-      color: #007bff;
+      color: #00adb5;
+    }
+    .timeline {
+      border-left: 3px solid #00adb5;
+      padding-left: 20px;
+    }
+    .timeline .event {
+      margin-bottom: 30px;
     }
     footer {
-      background: #343a40;
+      background: #1e1e1e;
       color: white;
       padding: 20px 0;
       text-align: center;
+    }
+    input, textarea {
+      background-color: #1e1e1e;
+      color: white;
+      border: 1px solid #444;
+    }
+    .form-control:focus {
+      background-color: #1e1e1e;
+      color: white;
+      border-color: #00adb5;
+      box-shadow: none;
     }
   </style>
 </head>
@@ -54,6 +72,7 @@
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
           <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
+          <li class="nav-item"><a class="nav-link" href="#experience">Experience</a></li>
           <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
           <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
         </ul>
@@ -64,7 +83,7 @@
   <section class="hero">
     <div class="container">
       <h1>Hi, I'm Hamid</h1>
-      <p class="lead">Software Engineer | Web Developer | AI </p>
+      <p class="lead">Software Engineer | Web Developer | AI Enthusiast</p>
     </div>
   </section>
 
@@ -87,6 +106,24 @@
     </div>
   </section>
 
+  <section id="experience" class="container py-5">
+    <h2 class="section-title">Experience</h2>
+    <div class="timeline">
+      <div class="event">
+        <h5>Prompt Engineer & QC Analyst - Orbit360 (Oct 2023 - Mar 2025)</h5>
+        <p>Developed, optimized, and tested AI-generated content for better quality and system efficiency. Managed GHL and handled prompt engineering for SEO and UI integration. Ensured top-notch quality control across various workflows and supported operational efficiency.</p>
+      </div>
+      <div class="event">
+        <h5>Web Developer - Freelance (2021 - 2022)</h5>
+        <p>Built responsive websites using WordPress and Shopify tailored to unique business needs.</p>
+      </div>
+      <div class="event">
+        <h5>WordPress Intern - Exact.pk (Aug 2021)</h5>
+        <p>Assisted in building and maintaining WordPress websites.</p>
+      </div>
+    </div>
+  </section>
+
   <section id="projects" class="container py-5">
     <h2 class="section-title">Projects</h2>
     <ul>
@@ -98,8 +135,22 @@
 
   <section id="contact" class="container py-5">
     <h2 class="section-title">Contact</h2>
-    <p>Email: <a href="mailto:hamid.f3489@gmail.com">hamid.f3489@gmail.com</a></p>
-    <p>LinkedIn: <a href="https://linkedin.com/in/hamid-firdous" target="_blank">linkedin.com/in/hamid-firdous</a></p>
+    <form action="https://formspree.io/f/mnqeznpr" method="POST">
+      <div class="mb-3">
+        <label for="name" class="form-label">Name</label>
+        <input type="text" class="form-control" id="name" name="name" required>
+      </div>
+      <div class="mb-3">
+        <label for="email" class="form-label">Email</label>
+        <input type="email" class="form-control" id="email" name="email" required>
+      </div>
+      <div class="mb-3">
+        <label for="message" class="form-label">Message</label>
+        <textarea class="form-control" id="message" name="message" rows="4" required></textarea>
+      </div>
+      <button type="submit" class="btn btn-primary">Send Message</button>
+    </form>
+    <p class="mt-3">Or connect on <a href="https://pk.linkedin.com/in/hamid-firdous-537b8118b" target="_blank">LinkedIn</a></p>
   </section>
 
   <footer>
